--- a/app/src/main/res/menu/up_menu.xml
+++ b/app/src/main/res/menu/up_menu.xml
@@ -8,4 +8,18 @@
         android:title="@string/Search"
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView" />
+
+    <item
+        android:id="@+id/settingsMenu"
+        android:title="@string/Settings"
+        android:icon="@drawable/ic_settingsicon"
+        />
+
+    <item
+        android:id="@+id/aboutMenu"
+        android:title="@string/About"
+        android:icon="@drawable/ic_question"
+        />
+
+
 </menu>
