--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#ea7100</color>
     <color name="colorPrimaryDark">#99460e</color>
     <color name="colorAccent">#1b34d8</color>
+    <color name="white">#ffffff</color>
+    <color name="darkGrey">#6c6c6c</color>
 </resources>
