--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="blindsStyle">
+        <item name="colorPrimary">@color/blindsColorPrimary</item>
+        <item name="colorPrimaryDark">@color/blindsColorPrimaryDark</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
 
 </resources>
