--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,14 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
+        <FrameLayout
+            android:id="@+id/main_frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="50dp">
+            android:layout_marginBottom="50dp" />
 
-            <include layout="@layout/card_view" />
-        </RelativeLayout>
         <include layout="@layout/layout_bottom_navigation"/>
+
+
 
     </RelativeLayout>
 
