--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/navigation_rooms"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_room_24dp"
         android:title="@string/title_rooms" />
 
     <item
         android:id="@+id/navigation_routines"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_calendar_24dp"
         android:title="@string/title_routines" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_cameras"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_cameras" />
 
 </menu>
