--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -5,7 +5,8 @@
     <item
         android:id="@+id/navigation_rooms"
         android:icon="@drawable/ic_room_24dp"
-        android:title="@string/title_rooms" />
+        android:title="@string/title_rooms"
+        android:iconTint="@color/white"/>
 
     <item
         android:id="@+id/navigation_routines"
