--- a/app/src/main/res/layout/fragment_devices.xml
+++ b/app/src/main/res/layout/fragment_devices.xml
@@ -22,7 +22,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/devices_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="50dp" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
