--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,9 +6,29 @@
 
 
     <color name="white">#ffffff</color>
-    <color name="darkGrey">#6c6c6c</color>
+    <color name="dark_grey">#6c6c6c</color>
 
     <color name="blindsColorPrimary">#23efef</color>
     <color name="blindsColorPrimaryDark">#179393</color>
+
+    <color name ="red">#f0453d</color>
+    <color name ="pink">#e52564</color>
+    <color name ="purple">#9830ac</color>
+    <color name ="deep_purple">#663fb2</color>
+    <color name ="indigo">#4054b0</color>
+    <color name ="blue">#2c96ee</color>
+    <color name ="light_blue">#1ea8ef</color>
+    <color name ="cyan">#1fbad1</color>
+    <color name ="teal">#159385</color>
+    <color name ="green">#50ac54</color>
+    <color name ="light_green">#8ac052</color>
+    <color name ="lime">#cbd949</color>
+    <color name ="yellow">#fce84e</color>
+    <color name ="amber">#fbbe2f</color>
+    <color name ="orange">#fb9527</color>
+    <color name ="deep_orange">#fa5830</color>
+    <color name ="brown">#775549</color>
+    <color name ="grey">#9c9c9c</color>
+    <color name ="blue_grey">#617c88</color>
 
 </resources>
