--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -5,8 +5,7 @@
     <item
         android:id="@+id/navigation_rooms"
         android:icon="@drawable/ic_room_24dp"
-        android:title="@string/title_rooms"
-        android:iconTint="@color/white"/>
+        android:title="@string/title_rooms"/>
 
     <item
         android:id="@+id/navigation_routines"
