--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,12 +5,14 @@
     <color name="colorAccent">#fdc205</color>
 
 
-    <color name="white">#ffffff</color>
+    <color name="white">#ffffffff</color>
     <color name="dark_grey">#6c6c6c</color>
+    <color name ="dark_grey_navbar">#5c5c5c</color>
 
     <color name="blindsColorPrimary">#23efef</color>
     <color name="blindsColorPrimaryDark">#179393</color>
 
+    <color name ="black">#ff000000</color>
     <color name ="red">#f0453d</color>
     <color name ="pink">#e52564</color>
     <color name ="purple">#9830ac</color>
