--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -6,4 +6,10 @@
         android:id="@+id/dark_theme_checkbox"
         android:key="dark_theme_checkbox"
         android:title="@string/pref_dark_theme" />
+    <ListPreference
+        android:defaultValue="2"
+        android:entries="@array/columns_amount"
+        android:entryValues="@array/columns_amount"
+        android:key="columns_amount"
+        android:title="@string/ColumnsAmount" />
 </PreferenceScreen>
