--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,29 @@
     <color name="white">#ffffff</color>
     <color name="darkGrey">#6c6c6c</color>
 
-    <color name="blindsColorPrimary">#23efef</color>
-    <color name="blindsColorPrimaryDark">#179393</color>
+
+    <color name="acColorPrimary">#23efef</color>
+    <color name="acColorPrimaryDark">#179393</color>
+
+    <color name="blindsColorPrimary">#6b28fd</color>
+    <color name="blindsColorPrimaryDark">#41158c</color>
+
+    <color name="doorColorPrimary">#ff4000</color>
+    <color name="doorColorPrimaryDark">#873315</color>
+
+    <color name="lampColorPrimary">#fae711</color>
+    <color name="lampColorPrimaryDark">#948e0e</color>
+
+    <color name="ovenColorPrimary">#ff3434</color>
+    <color name="ovenColorPrimaryDark">#931b17</color>
+
+    <color name="refrigeratorColorPrimary">#2634ff</color>
+    <color name="refrigeratorColorPrimaryDark">#151f87</color>
+
+    <color name="alarmColorPrimary">#31ff29</color>
+    <color name="alarmColorPrimaryDark">#1b9317</color>
+
+    <color name="timerColorPrimary">#ef23d7</color>
+    <color name="timerColorPrimaryDark">#931787</color>
+
 </resources>
