--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,10 +7,38 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="blindsStyle">
+
+    <style name="acStyle" parent="AppTheme">
+        <item name="colorPrimary">@color/acColorPrimary</item>
+        <item name="colorPrimaryDark">@color/acColorPrimaryDark</item>
+    </style>
+    <style name="blindsStyle" parent="AppTheme">
         <item name="colorPrimary">@color/blindsColorPrimary</item>
         <item name="colorPrimaryDark">@color/blindsColorPrimaryDark</item>
-        <item name="android:windowNoTitle">true</item>
+    </style>
+    <style name="doorStyle" parent="AppTheme">
+        <item name="colorPrimary">@color/doorColorPrimary</item>
+        <item name="colorPrimaryDark">@color/doorColorPrimaryDark</item>
+    </style>
+    <style name="lampStyle" parent="AppTheme">
+        <item name="colorPrimary">@color/lampColorPrimary</item>
+        <item name="colorPrimaryDark">@color/lampColorPrimaryDark</item>
+    </style>
+    <style name="ovenStyle" parent="AppTheme">
+        <item name="colorPrimary">@color/ovenColorPrimary</item>
+        <item name="colorPrimaryDark">@color/ovenColorPrimaryDark</item>
+    </style>
+    <style name="refrigeratorStyle" parent="AppTheme">
+        <item name="colorPrimary">@color/refrigeratorColorPrimary</item>
+        <item name="colorPrimaryDark">@color/refrigeratorColorPrimaryDark</item>
+    </style>
+    <style name="alarmStyle" parent="AppTheme">
+        <item name="colorPrimary">@color/alarmColorPrimary</item>
+        <item name="colorPrimaryDark">@color/alarmColorPrimaryDark</item>
+    </style>
+    <style name="timerStyle" parent="AppTheme">
+        <item name="colorPrimary">@color/timerColorPrimary</item>
+        <item name="colorPrimaryDark">@color/timerColorPrimaryDark</item>
     </style>
 
 </resources>
