--- a/app/src/main/res/layout/lamp.xml
+++ b/app/src/main/res/layout/lamp.xml
@@ -12,12 +12,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="0dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center">
 
             <ImageView
@@ -53,6 +54,11 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dip"
+                    android:background="#dddddd" />
+
                 <Switch
                     android:id="@+id/OnOff"
                     android:layout_width="300dp"
@@ -74,13 +80,13 @@
                 <View
                     android:layout_width="fill_parent"
                     android:layout_height="1dip"
-                    android:background="#ffffffff" />
+                    android:background="#dddddd" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:gravity="center"
                     android:orientation="horizontal">
 
@@ -105,40 +111,25 @@
 
                 <View
                     android:layout_width="fill_parent"
-                    android:layout_height="2dip"
-                    android:background="#ffffffff" />
+                    android:layout_height="1dip"
+                    android:background="#dddddd" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center"
-                    android:orientation="horizontal">
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="15dp"
+                    android:text="@string/ColorPicker"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
 
-                    <TextView
-                        android:id="@+id/VSwing"
-                        android:layout_width="93dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:text="@string/VerticalSwing"
-                        android:textColor="#000000"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintHorizontal_bias="1.0"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.65" />
-
-                    <SeekBar
-                        android:id="@+id/VSwingSeekBar"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
-                </LinearLayout>
-
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="2dip"
-                    android:background="#ffffffff" />
+                <com.skydoves.colorpickerpreference.ColorPickerView
+                    android:id="@+id/colorPickerView"
+                    android:layout_width="249dp"
+                    android:layout_height="249dp"
+                    android:layout_gravity="center"
+                    app:palette="@drawable/palette"
+                    app:selector="@drawable/wheel" />
 
             </LinearLayout>
         </ScrollView>
