Ahi va la cagada

--- a/app/src/main/res/layout/card_view_item.xml
+++ b/app/src/main/res/layout/card_view_item.xml
@@ -1,36 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="165dp"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/tools"
-    android:id="@+id/card_view"
-    android:layout_height="200dp"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="5dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginRight="5dp"
+    android:layout_marginLeft="5dp">
+<android.support.v7.widget.CardView
+    android:id="@+id/card_view"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
     cardview:cardCornerRadius="2dp">
 
     <RelativeLayout
+        android:id="@+id/card_view_relative"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/card_view_relative">
+        android:orientation="vertical">
 
 
         <ImageView
+            android:id="@+id/card_view_img"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:id="@+id/card_view_img"
-            android:background="#00ffffff"/>
+            android:background="#00ffffff" />
 
         <TextView
             android:id="@+id/card_view_title"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:gravity="center"
+            android:layout_height="0dp"
             android:layout_alignParentBottom="true"
+            android:background="#27000000"
+            android:gravity="center"
             android:text="Title"
             android:textColor="#2d2d2d"
-            android:textSize="22sp"
-            android:background="#27000000"/>
+            android:textSize="10sp" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
+</RelativeLayout>
