--- a/app/src/main/res/layout/alarm.xml
+++ b/app/src/main/res/layout/alarm.xml
@@ -54,7 +54,7 @@
                 android:orientation="vertical">
 
                 <Switch
-                    android:id="@+id/OnOff"
+                    android:id="@+id/OnOffAlarm"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
