--- a/app/src/main/res/layout/oven.xml
+++ b/app/src/main/res/layout/oven.xml
@@ -92,19 +92,19 @@
 
                     <TextView
                         android:id="@+id/Temperature"
-                        android:layout_width="93dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:text="@string/Temperature"
                         android:textColor="#000000"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/TempSeekBar"
+                        app:layout_constraintEnd_toStartOf="@+id/AcTempSeekBar"
                         app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <SeekBar
-                        android:id="@+id/TempSeekBar"
+                        android:id="@+id/AcTempSeekBar"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
                 </LinearLayout>
@@ -123,7 +123,7 @@
 
                     <TextView
                         android:id="@+id/HeatMode"
-                        android:layout_width="93dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:clickable="true"
@@ -151,7 +151,7 @@
 
                     <TextView
                         android:id="@+id/GrillMode"
-                        android:layout_width="93dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:clickable="true"
@@ -180,7 +180,7 @@
 
                     <TextView
                         android:id="@+id/ConvectionMode"
-                        android:layout_width="93dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:clickable="true"
