--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -14,7 +14,7 @@
 
     <item
         android:id="@+id/navigation_cameras"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_cameras" />
+        android:icon="@drawable/ic_favourites_24"
+        android:title="@string/title_favourites" />
 
 </menu>
