--- a/app/src/main/res/layout/oven.xml
+++ b/app/src/main/res/layout/oven.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/acStyle">
@@ -60,7 +59,7 @@
                     android:background="#dddddddd" />
 
                 <Switch
-                    android:id="@+id/OnOff"
+                    android:id="@+id/OnOffOven"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
@@ -104,9 +103,10 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <SeekBar
-                        android:id="@+id/AcTempSeekBar"
+                        android:id="@+id/OvenTempSeekBar"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        android:max="140"/>
                 </LinearLayout>
 
                 <View
